--- a/index.html
+++ b/index.html
@@ -6,42 +6,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background: #0b0f1a;
-      color: #ffffff;
-    }
-    header {
-      padding: 60px 20px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 18px;
-      color: #cfd8ff;
-      max-width: 700px;
-      margin: 0 auto 30px;
-    }
-    .lang {
-      margin-top: 40px;
-    }
-    .lang a {
-      color: #6cf;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: 600;
-    }
-    footer {
-      margin-top: 80px;
-      padding: 20px;
-      font-size: 14px;
-      color: #8892c9;
-    }
-  </style>
-</head>
+      <section>
+  <h1>Solarion — AI-студия для роста бизнеса</h1>
+
+  <p>
+    Мы создаём AI-системы, которые приводят клиентов, автоматизируют процессы
+    и экономят время владельцам бизнеса.
+  </p>
+
+  <p>
+    Без лишних инструментов.<br>
+    Без хайпа.<br>
+    Только то, что реально работает.
+  </p>
+
+  <h2>Что мы делаем</h2>
+  <p>
+    Solarion — универсальная AI-студия. Мы объединяем контент, маркетинг
+    и автоматизацию в одну понятную систему.
+  </p>
+
+  <h2>Наши направления</h2>
+  <ul>
+    <li><strong>AI-контент</strong> — тексты, сценарии, офферы</li>
+    <li><strong>AI-маркетинг</strong> — упаковка, реклама, аналитика</li>
+    <li><strong>AI-автоматизация</strong> — заявки, коммуникации, процессы</li>
+  </ul>
+
+  <h2>Как мы работаем</h2>
+  <ol>
+    <li>Анализируем бизнес</li>
+    <li>Проектируем AI-систему</li>
+    <li>Внедряем и настраиваем</li>
+    <li>Улучшаем по данным</li>
+  </ol>
+
+  <p><strong>Мы не продаём инструменты.<br>
+  Мы строим AI-системы под ваш бизнес.</strong></p>
+
+  <h2>С чего начать</h2>
+  <p>
+    AI Strategy & Setup — быстрый и безопасный вход в AI
+    без лишних рисков.
+  </p>
+
+  <p><strong>Свяжитесь с нами — начнём со стратегии.</strong></p>
+</section>
 <body>
 
 <header>
