--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Solarion – AI-Powered Digital Studio</title>
+  <title>Solarion - AI-Powered Digital Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     body {
-      <section>
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #0f1115;
+      color: #ffffff;
+      line-height: 1.6;
+    }
+
+    header, footer {
+      text-align: center;
+      padding: 30px 20px;
+      background: #151821;
+    }
+
+    section {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    h1, h2 {
+      color: #ffffff;
+    }
+
+    p, li {
+      color: #cfcfcf;
+    }
+
+    ul, ol {
+      margin-left: 20px;
+    }
+
+    .lang {
+      margin-top: 10px;
+      font-size: 14px;
+    }
+
+    .lang a {
+      color: #7aa2ff;
+      text-decoration: none;
+      margin: 0 5px;
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  <h1>Solarion</h1>
+  <p>AI-Powered Digital Studio for content, automation and growth.</p>
+  <div class="lang">
+    <a href="#">EN</a> | <a href="#">RU</a>
+  </div>
+</header>
+
+<section>
   <h1>Solarion — AI-студия для роста бизнеса</h1>
 
   <p>
@@ -41,8 +97,12 @@
     <li>Улучшаем по данным</li>
   </ol>
 
-  <p><strong>Мы не продаём инструменты.<br>
-  Мы строим AI-системы под ваш бизнес.</strong></p>
+  <p>
+    <strong>
+      Мы не продаём инструменты.<br>
+      Мы строим AI-системы под ваш бизнес.
+    </strong>
+  </p>
 
   <h2>С чего начать</h2>
   <p>
@@ -52,15 +112,6 @@
 
   <p><strong>Свяжитесь с нами — начнём со стратегии.</strong></p>
 </section>
-<body>
-
-<header>
-  <h1>Solarion</h1>
-  <p>AI-Powered Digital Studio for content, automation and growth.</p>
-  <div class="lang">
-    <a href="#">EN</a> | <a href="#">RU</a>
-  </div>
-</header>
 
 <footer>
   © Solarion Media. All rights reserved.
