--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8" />
   <title>Solarion — AI Digital Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
+    /* --- GLOBAL STYLES --- */
     body {
       margin: 0;
       padding: 0;
@@ -16,39 +15,99 @@
       background: radial-gradient(1200px at 20% 10%, #1a1f3c, #0f1115);
       color: #ffffff;
       line-height: 1.7;
+      scroll-behavior: smooth;
     }
 
-    header, footer {
+    h1, h2, h3, p, li { margin: 0; padding: 0; }
+    ul, ol { padding-left: 20px; }
+
+    a { text-decoration: none; cursor: pointer; }
+
+    /* --- HEADER --- */
+    header {
       text-align: center;
-      padding: 30px 20px;
-      background: rgba(21, 24, 33, 0.8);
+      padding: 40px 20px;
+      background: rgba(21,24,33,0.85);
       backdrop-filter: blur(6px);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
+    header h1 { font-size: 44px; margin-bottom: 8px; }
+    header p { font-size: 16px; color: #a0a0a0; }
+
+    .lang a {
+      color: #7aa2ff;
+      margin: 0 8px;
+      font-weight: 600;
+      transition: color 0.2s;
+    }
+
+    .lang a:hover { color: #a0c4ff; }
+
+    /* --- SECTIONS --- */
     section {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 0 auto;
       padding: 60px 20px;
     }
 
-    h1 { font-size: 42px; margin-bottom: 10px; }
-    h2 { margin-top: 60px; color: #9db4ff; }
-    p, li { color: #cfcfcf; font-size: 17px; }
-    ul, ol { margin-left: 20px; }
+    h2 { color: #9db4ff; margin-top: 60px; font-size: 32px; }
 
-    .lang { margin-top: 10px; font-size: 14px; }
-    .lang a { color: #7aa2ff; text-decoration: none; margin: 0 6px; cursor: pointer; }
+    p, li { color: #cfcfcf; font-size: 17px; margin-top: 12px; }
+    
+    /* --- FEATURES CARDS --- */
+    .features { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap: 28px; margin-top: 40px; }
+    .card {
+      background: rgba(21,24,33,0.9);
+      border-radius: 14px;
+      padding: 28px;
+      border: 1px solid #1f2433;
+      transition: transform 0.3s ease, border 0.3s ease, box-shadow 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-6px);
+      border-color: #7aa2ff;
+      box-shadow: 0 10px 25px rgba(122,162,255,0.3);
+    }
+    .card h3 { margin-bottom: 12px; color: #ffffff; font-size: 20px; }
+    
+    /* --- CTA --- */
+    .cta {
+      margin-top: 80px;
+      padding: 50px 30px;
+      text-align: center;
+      background: linear-gradient(135deg, #1f2b6d, #151821);
+      border-radius: 18px;
+    }
+    .cta h2 { font-size: 30px; color: #ffffff; margin-bottom: 20px; }
+    .cta a {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 16px 32px;
+      background: #7aa2ff;
+      color: #0f1115;
+      border-radius: 12px;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+    .cta a:hover { background: #5f8ee0; }
 
-    .features { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 24px; margin-top: 40px; }
-    .card { background: #151821; border-radius: 14px; padding: 24px; border: 1px solid #1f2433; transition: transform 0.2s ease, border 0.2s ease; }
-    .card:hover { transform: translateY(-4px); border-color: #7aa2ff; }
-    .card h3 { margin-top: 0; color: #ffffff; }
+    /* --- FOOTER --- */
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      background: rgba(21,24,33,0.85);
+      color: #888;
+    }
 
-    .cta { margin-top: 60px; padding: 40px; text-align: center; background: linear-gradient(135deg, #1f2b6d, #151821); border-radius: 16px; }
-    .cta h2 { margin-top: 0; color: #ffffff; }
-    .cta a { display: inline-block; margin-top: 20px; padding: 14px 28px; background: #7aa2ff; color: #0f1115; text-decoration: none; border-radius: 10px; font-weight: 600; }
-
-    footer { font-size: 14px; color: #888; }
+    /* --- RESPONSIVE --- */
+    @media(max-width:768px){
+      header h1 { font-size: 36px; }
+      h2 { font-size: 28px; }
+      .cta h2 { font-size: 26px; }
+    }
   </style>
 </head>
 
